# alabauhnos.es

./: CNAME  index.html  pyproject.toml  update-web.py
.github/workflows/: deploy.yml
web/: index.html
