[tool.poetry]
name = "alabauhnos-es"
version = "0.1.0"
description = ""
authors = ["Vicent Alabau <valabau@sciling.com>"]
readme = "README.md"
packages = [{ include = "alabauhnos" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
